--- a/style.css
+++ b/style.css
@@ -1,45 +1,206 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-:root {
-    --card-height: 300px;
-    --card-width: calc(var(--card-height) / 1.5);
-}
-
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    font-family: Roboto, sans-serif;
+    background: #212121;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    /* background: url('https://cdn.connectsites.net/user_files/esp/site_assets/000/041/488/original.jpg?1630681975') center/cover no-repeat fixed;
+    background-position: center top; */
+}
+
+.container {
+    background: url('https://cdn.connectsites.net/user_files/esp/site_assets/000/041/488/original.jpg?1630681975') center/cover no-repeat fixed;
+    background-position: center top;
+}
+
+header {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all ease 0.5s;
+    background: rgb(0, 0, 0, 0.9);
+}
+
+.header-image {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.logo-header {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding-left: 30px;
+}
+
+.header-image p {
+    color: white;
+    align-self: center;
+    padding: 10px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.header-image p:nth-child(3){
+    padding-right: 30px;
+}
+
+/* part 1 */
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20% 10%;
+    text-align: center;
+}
+
+.main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    margin: 0;
+    text-align: center;
+}
+
+.under-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding-bottom: 18px;
+    text-align: center;
+}
+
+.secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 18px;
+    background-color: rgb(0, 0, 0, 0.4)
+}
+
+.signature-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 60px 0px 55px 0px; */
+}
+
+/* footer */
+
+footer {
+    margin-top: auto;
+    background-color: #111;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: auto;
+    font-size: 16px;
+    color: #E5E7EB;
+    font-weight: 100;
+    padding: 20px;
+}
+
+.footer-text {
+    display: flex;
+    font-size: 14px;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.footer-text p {
+    align-self: center;
+    padding: 0px 30px;
+}
+
+.footer-references p {
+    padding: 3px;
+}
+
+.footer-socials {
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-socials a {
+    margin-right: 10px;
+}
+
+.footer a:hover {
+    text-decoration: none;
+}
+
+/* CARD */
+/* CARD */
+/* CARD */
+/* CARD */
+/* CARD */
+
+.card-container-bg {
+    display: flex;
+    width: 100%;
+    height: 26.5vw;
+    background: #212121;
+}
+
+:root {
+    --card-height: 100%;
+    --card-width: calc(var(--card-height) / 1.5);
+}
+
+.card-container {
+    height: auto;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #212121;
-    background: url('https://espguitars.co.jp/wp-content/uploads/2018/05/Alexi.png') center/cover no-repeat fixed;
-    background-position: center top;
+    padding-bottom: 3vw;
+}
+
+.card-left,
+.card-mid-left,
+.card-mid-right,
+.card-right {
+    display: flex;
+    justify-content: center;
 }
 
 .card {
-    width: var(--card-width);
-    height: var(--card-height);
+    width: 80%;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     padding: 0 36px;
     perspective: 2500px;
-    margin: 0 50px;
     cursor: pointer;
 }
 
-.cover-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.cover-image,
+.title {
+    max-width: 100%;
 }
 
 .wrapper {
@@ -58,23 +219,22 @@ body {
     transition: all 0.5s;
     position: absolute;
     left: 0;
-    
 }
 
 .wrapper::before {
     top: 0;
     opacity: 0;
-    background-image: linear-gradient(to top, transparent 46%, rgb(12,13,19,0.5) 68%, rgb(12,13,19) 97%);
+    background-image: linear-gradient(to top, transparent 46%, rgb(12, 13, 19, 0.5) 68%, rgb(12, 13, 19) 97%);
 }
 
 .wrapper::after {
     bottom: 0;
     opacity: 0;
-    background-image: linear-gradient(to bottom, transparent 46%, rgb(12,13,19,0.5) 68%, rgb(12,13,19) 97%);
+    background-image: linear-gradient(to bottom, transparent 46%, rgb(12, 13, 19, 0.5) 68%, rgb(12, 13, 19) 97%);
 }
 
 .title {
-    width: 60%;
+    width: 70%;
     transition: transform 0.5s;
     display: flex;
     justify-content: center;
@@ -84,7 +244,7 @@ body {
 }
 
 .guitar {
-    width: 140%;
+    max-width: 110%;
     opacity: 0;
     position: absolute;
     z-index: -1;
@@ -93,7 +253,7 @@ body {
 
 .card:hover .wrapper {
     transform: perspective(900px) translateY(-5%) rotateX(25deg) translateZ(0);
-    box-shadow: 0px 35px 32px -8px rgb(0,0,0,0.75);
+    box-shadow: 0px 35px 32px -8px rgb(0, 0, 0, 0.75);
 }
 
 .card:hover .title {
@@ -116,65 +276,4 @@ body {
 .card:hover .guitar {
     opacity: 1;
     transform: translate3d(0%, -30%, -100px);
-}
-
-header {
-    background: rgba(0, 0, 0, 0.9);
-    color: white;
-
-    text-align: center;
-    top: 0;
-    position: fixed;
-    width: 100%;
-    font-size: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding: 20px
-}
-
-.header-image {
-    width: 70px;
-    height: 70px;
-    align-self: center;
-}
-
-footer {
-    background-color: rgba(17, 17, 17, 0.8);
-    color: white;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: auto;
-    font-size: 14px;
-}
-
-.footer-references p {
-    padding: 6px;
-}
-
-.footer-socials {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.footer-socials a {
-    margin-right: 10px;
-}
-
-.footer a {
-    font-size: 40px;
-}
-
-.footer a:hover {
-    text-decoration: none;
 }
